--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ nav ul li a {
   margin-top: 30px;
 }
 .service-icon {
-  width: 30px; /* Reduire la taille de l'icône */
+  width: 30px; /* Réduire la taille de l'icône */
   height: auto;
   vertical-align: middle;
   margin-right: 10px;
